// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product controller get Category should get all categories 1`] = `
Array [
  "category_id",
  "department_id",
  "name",
  "description",
]
`;

exports[`product controller get Category should return not found if id category does not exist 1`] = `
Array [
  "error",
]
`;

exports[`product controller get Category should return not found if id category does not exist 2`] = `
Array [
  "status",
  "code",
  "message",
  "field",
]
`;

exports[`product controller getAllCategories should get all categories 1`] = `
Array [
  "category_id",
  "department_id",
  "name",
  "description",
]
`;

exports[`product controller getDepartmentCategories should get all category in this department 1`] = `
Array [
  "category_id",
  "department_id",
  "name",
  "description",
]
`;

exports[`product controller getDepartmentCategories should return not found if department Id does not exist 1`] = `
Array [
  "error",
]
`;

exports[`product controller getDepartmentCategories should return not found if department Id does not exist 2`] = `
Array [
  "status",
  "code",
  "message",
  "field",
]
`;

exports[`product controller getProductCategories should get category of a particular product 1`] = `
Array [
  "category_id",
  "department_id",
  "name",
]
`;

exports[`product controller getProductCategories should return an error if the product with the id is not found 1`] = `
Array [
  "error",
]
`;

exports[`product controller getProductCategories should return an error message if id is not a number 1`] = `
Array [
  "error",
]
`;

exports[`product controller getProductCategories should return an error message if id is not a number 2`] = `
Array [
  "status",
  "code",
  "message",
]
`;
